<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray2"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="1.0" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_background" >

        <TextView
            style="@style/TitleText"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativelayout_viewerscontainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1" >

        <leadtools.controls.RasterImageViewer
            android:id="@+id/imageviewer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white" >
        </leadtools.controls.RasterImageViewer>

        <SurfaceView
            android:id="@+id/surfaceview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />


    </RelativeLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_background" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_image_live_capture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:background="@drawable/gray_button_selector"
                android:contentDescription="@string/image_live_capture"
                android:drawableTop="@drawable/image_live_capture"
                android:onClick="onSelectImage"
                android:text="@string/image_live_capture" />

            <Button
                android:id="@+id/btn_image_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/image_gallery"
                android:onClick="onSelectImage"
                android:text="@string/image_gallery"
                android:background="@drawable/gray_button_selector"
                android:drawableTop="@drawable/image_gallery" />

            <Button
                android:id="@+id/btn_image_browse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/image_file"
                android:onClick="onSelectImage"
                android:text="@string/image_file"
                android:background="@drawable/gray_button_selector"
                android:drawableTop="@drawable/open" />

            <Button
                android:id="@+id/btn_image_capture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/image_capture"
                android:onClick="onSelectImage"
                android:text="@string/image_take_picture"
                android:background="@drawable/gray_button_selector"
                android:drawableTop="@drawable/image_camera" />

            <Button
                android:id="@+id/btn_recognize_micr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:background="@drawable/gray_button_selector"
                android:contentDescription="@string/ocr_recognize_micr"
                android:drawableTop="@drawable/recognize_micr"
                android:onClick="onRecognizeMicr"
                android:text="@string/ocr_recognize_micr" />

            <Button
                android:id="@+id/btn_recognize_zone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/ocr_recognize_zone"
                android:onClick="onRecognizeArea"
                android:text="@string/ocr_recognize_zone"
                android:background="@drawable/gray_button_selector"
                android:drawableTop="@drawable/select" />

            <Button
                android:id="@+id/btn_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_button_selector"
                android:contentDescription="@string/settings"
                android:drawableTop="@drawable/settings"
                android:onClick="onSettings"
                android:text="@string/settings" />

        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>